# mod-scanner

./: .gitignore  Cargo.toml  README.md  program.md
.claude/: settings.local.json
.github/workflows/: ci.yml
crates/modscanner-cli/: Cargo.toml
crates/modscanner-cli/src/: main.rs
crates/modscanner-core/: Cargo.toml
crates/modscanner-core/src/: file_context.rs  lib.rs  scanner.rs
crates/modscanner-core/src/engine/: binary.rs  filetype.rs  mod.rs  polyglot.rs  static_analysis.rs  unicode.rs
crates/modscanner-core/src/report/: mod.rs
crates/modscanner-curseforge/: Cargo.toml
crates/modscanner-curseforge/src/: lib.rs
crates/modscanner-monitor/: Cargo.toml
crates/modscanner-monitor/src/: lib.rs
crates/modscanner-platform/: Cargo.toml
crates/modscanner-platform/src/: lib.rs
crates/modscanner-rimworld/: Cargo.toml
crates/modscanner-rimworld/src/: lib.rs
crates/modscanner-steam/: Cargo.toml
crates/modscanner-steam/src/: lib.rs
crates/modscanner-wow/: Cargo.toml
crates/modscanner-wow/src/: lib.rs
eval/: evaluate.sh  expected.toml  results.tsv
eval/corpus/benign/rimworld/clean_mod/About/: About.xml
eval/corpus/benign/rimworld/clean_mod/Defs/: Items.xml
eval/corpus/benign/rimworld/mod_with_dll/About/: About.xml
eval/corpus/benign/wow/addon_with_libs/: AddonWithLibs.lua  AddonWithLibs.toc
eval/corpus/benign/wow/addon_with_libs/Libs/: LibStub.lua
eval/corpus/benign/wow/simple_addon/: SimpleAddon.lua  SimpleAddon.toc
eval/corpus/malicious/generic/mixed_script/: code.cs
eval/corpus/malicious/generic/zero_width/: script.lua
eval/corpus/malicious/rimworld/bidi_attack/: evil.lua
eval/corpus/malicious/wow/covert_channel/: CovertChannel.lua
eval/corpus/malicious/wow/obfuscated_lua/: Obfuscated.lua
eval/corpus/malicious/wow/sandbox_escape/: SandboxBreak.lua
tests/fixtures/rimworld/clean_mod/About/: About.xml
tests/fixtures/rimworld/clean_mod/Defs/: ThingDefs.xml
tests/fixtures/rimworld/malicious_mod/: bidi_script.lua
tests/fixtures/rimworld/malicious_mod/About/: About.xml
